Added another paragraph

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         schlitz iceland yr cold-pressed man braid palo santo ethical pinterest
         artisan microdosing asymmetrical.
       </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti enim
+        accusantium nostrum debitis nisi facilis magni distinctio doloremque
+        reiciendis asperiores maiores, tempore illo beatae nesciunt eveniet?
+        Laborum tempore exercitationem corporis!
+      </p>
     </section>
 
     <blockquote class="main-quote">
